--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,12 @@
 
 .text-gradient {
   background: radial-gradient(64.18% 64.18% at 71.16% 35.69%,
-      #eedcb8 0.89%,
-      #f5e8be 17.23%,
-      #f0de9d 42.04%,
-      #ebd97d 55.12%,
-      #e6ca5c 71.54%,
-      #cfab33 100%);
+      #eecc88 0.89%,
+      #f1d57a 17.23%,
+      #e8c851 42.04%,
+      #e8cb39 55.12%,
+      #a38c30 71.54%,
+      #6f5c1e 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
