--- a/src/index.css
+++ b/src/index.css
@@ -28278,7 +28278,7 @@ pre {
 
 .card-header {
   padding: card-cap-padding-y card-cap-padding-x;
-  margin-bottom: 0; 
+  margin-bottom: 0;
   color: card-cap-color;
   background-color: card-cap-bg;
   border-bottom: card-border-width solid card-border-color;
@@ -28286,84 +28286,90 @@ pre {
 
 
 
-.dataTables_wrapper input[type="search"], input[type="text"], select {
+.dataTables_wrapper input[type="search"],
+input[type="text"],
+select {
   border: 0.0625rem solid #e2e2e2;
   padding: .3rem 0.5rem;
   color: rgba(113, 93, 93, 1);
   border-radius: 0.3125rem;
 }
-.dataTables_wrapper .dataTables_length{
+
+.dataTables_wrapper .dataTables_length {
   margin-bottom: 0.9375rem;
 }
-.dataTables_wrapper .dataTables_length .bootstrap-select{
+
+.dataTables_wrapper .dataTables_length .bootstrap-select {
   width: 5rem;
   margin: 0 0.3125rem;
 }
 
-table.dataTable.no-footer{
+table.dataTable.no-footer {
   border-bottom: 0;
 }
 
 
-.rounded-lg{
-min-width:1.875rem;
+.rounded-lg {
+  min-width: 1.875rem;
 }
-.dataTables_scroll{
+
+.dataTables_scroll {
   padding: 1rem 0;
 }
 
-.dataTables_scroll .Foot{
+.dataTables_scroll .Foot {
   padding-top: 1rem;
 }
 
-.dataTables_wrapper .dataTables_paginate .paginate_button.disabled, 
-.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, 
-.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active{
-	color:var(--bs-primary) !important;
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled,
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover,
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
+  color: var(--bs-primary) !important;
 }
 
 .paging_simple_numbers.dataTables_paginate {
-	padding: 0.3125rem 0.3125rem;
+  padding: 0.3125rem 0.3125rem;
 }
 
-.dataTables_wrapper .dataTables_paginate .paginate_button{
-	color: body-color !important;
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+  color: body-color !important;
 }
 
 
-.dataTables_wrapper .dataTables_paginate{
-	align-items: center;
-    display: flex;
-	flex-flow:wrap;
+.dataTables_wrapper .dataTables_paginate {
+  align-items: center;
+  display: flex;
+  flex-flow: wrap;
 }
 
-.dataTables_wrapper .dataTables_paginate .paginate_button.previous,.paginate_button.next{
+.dataTables_wrapper .dataTables_paginate .paginate_button.previous,
+.paginate_button.next {
   font-size: 1.125rem;
-  height:48px;
+  height: 48px;
   width: 48px;
-  background:transparent;
+  background: transparent;
   border-radius: "12px";
   padding: 0 0.45rem;
-  line-height:3.125rem;
-  margin:0 0.625rem;
-  display:inline-block;
-  color:var(--primary)!important;
-  
+  line-height: 3.125rem;
+  margin: 0 0.625rem;
+  display: inline-block;
+  color: var(--primary) !important;
+
 }
 
-.dataTables_wrapper .dataTables_paginate span .paginate_button{
-  height:48px;
-  width:48px;
-  padding:0;
+.dataTables_wrapper .dataTables_paginate span .paginate_button {
+  height: 48px;
+  width: 48px;
+  padding: 0;
   margin-left: 0rem;
-  margin:0 0.125rem;
-  line-height:3.125rem;
-  text-align:center;
-  font-size:1.125rem;
-  border-radius:"12px";
-  border:0;
-  color:var(--primary)!important;
-  background:var(--rgba-primary-1)!important;
+  margin: 0 0.125rem;
+  line-height: 3.125rem;
+  text-align: center;
+  font-size: 1.125rem;
+  border-radius: "12px";
+  border: 0;
+  color: var(--primary) !important;
+  background: var(--rgba-primary-1) !important;
 }
 
 
@@ -28377,31 +28383,32 @@ min-width:1.875rem;
 }
 
 
-.dataTables_wrapper  .dataTables_length{
+.dataTables_wrapper .dataTables_length {
   margin-bottom: 0.9375rem;
 }
 
-.dataTables_wrapper  .dataTables_length .bootstrap-select{
+.dataTables_wrapper .dataTables_length .bootstrap-select {
   width: 5rem;
   margin: 0 0.3125rem;
 }
-.dataTables_wrapper .dataTables_length, 
-.dataTables_wrapper .dataTables_filter, 
-.dataTables_wrapper .dataTables_processing, 
+
+.dataTables_wrapper .dataTables_length,
+.dataTables_wrapper .dataTables_filter,
+.dataTables_wrapper .dataTables_processing,
 .dataTables_wrapper .dataTables_paginate {
-    color: body-color;
-	border-radius:"1rem";
-	padding:0.125rem 0;
-	margin-bottom:1.25rem;
+  color: body-color;
+  border-radius: "1rem";
+  padding: 0.125rem 0;
+  margin-bottom: 1.25rem;
 }
 
 .paging_simple_numbers.dataTables_paginate {
-	padding: 0.3125rem 0.3125rem;
-}
-.dataTables_wrapper .dataTables_paginate .paginate_button{
-	color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity));
+  padding: 0.3125rem 0.3125rem;
 }
 
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+  color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity));
+}
 
 
 
@@ -28453,127 +28460,233 @@ min-width:1.875rem;
 
 
 
-  
+
+
 .buy-sell .nav-tabs {
   justify-content: space-around;
   /* border-color: var(--rgba-secondary-1);  */
-  border-color: whitesmoke; 
+  border-color: whitesmoke;
 }
+
+.buy-sell .nav-tabs .nav-link {
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: uppercase;
+  /* color: var(--secondary); */
+  color: #846424;
+  background: transparent;
+  border: 0;
+  width: 50%;
+  position: relative;
+  padding-bottom: 13px;
+}
+
+.buy-sell .nav-tabs .nav-link:after {
+  content: "";
+  height: 4px;
+  position: absolute;
+  bottom: 0;
+  width: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  /* background-color: var(--primary); */
+  background-color: #846424;
+  transition: all 0.2s;
+}
+
+.buy-sell .nav-tabs .nav-link.active {
+  color: var(--primary);
+}
+
+.buy-sell .nav-tabs .nav-link.active:after {
+  width: 100%;
+}
+
+@media only screen and (max-width: 87.5rem) {
   .buy-sell .nav-tabs .nav-link {
-    font-size: 15px;
-    font-weight: 600;
-    text-transform: uppercase;
-    /* color: var(--secondary); */
-    color: #846424;
-    background: transparent;
-    border: 0;
-    width: 50%;
-    position: relative;
-    padding-bottom: 13px; }
-    .buy-sell .nav-tabs .nav-link:after {
-      content: "";
-      height: 4px;
-      position: absolute;
-      bottom: 0;
-      width: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      /* background-color: var(--primary); */
-      background-color: #846424;
-      transition: all 0.2s; }
-    .buy-sell .nav-tabs .nav-link.active {
-      color: var(--primary); }
-      .buy-sell .nav-tabs .nav-link.active:after {
-        width: 100%; }
-    @media only screen and (max-width: 87.5rem) {
-      .buy-sell .nav-tabs .nav-link {
-        font-size: 18px; } }
+    font-size: 18px;
+  }
+}
 
 .buy-sell.style-1 .nav-tabs .nav-link {
   font-size: 14px;
   font-weight: 500;
   color: var(--secondary);
-  text-transform: capitalize; }
-  [data-theme-version="dark"] .buy-sell.style-1 .nav-tabs .nav-link {
-    color: var(--primary); }
-  .buy-sell.style-1 .nav-tabs .nav-link.active {
-    color: var(--primary); }
+  text-transform: capitalize;
+}
+
+[data-theme-version="dark"] .buy-sell.style-1 .nav-tabs .nav-link {
+  color: var(--primary);
+}
+
+.buy-sell.style-1 .nav-tabs .nav-link.active {
+  color: var(--primary);
+}
 
 .limit-sell {
   padding: 0 45px;
-  margin-top: 2rem; }
-  @media only screen and (max-width: 100rem) {
-    .limit-sell {
-      padding: 0 20px; } }
-  .limit-sell .nav-tabs {
-    background: var(--rgba-primary-1);
-    justify-content: space-around;
-    border-radius: 0.625rem;
-    border-bottom: 0;
-    padding: 5px 2px; }
-    .limit-sell .nav-tabs .nav-link {
-      background: transparent;
-      border: 0;
-      text-transform: uppercase;
-      color: var(--primary);
-      padding: 5px 0px;
-      width: 47%;
-      font-size: 13px;
-      font-weight: 500; }
-      .limit-sell .nav-tabs .nav-link.active {
-        background: var(--primary);
-        color: #fff;
-        border-radius: 7px; }
+  margin-top: 2rem;
+}
+
+@media only screen and (max-width: 100rem) {
+  .limit-sell {
+    padding: 0 20px;
+  }
+}
+
+.limit-sell .nav-tabs {
+  background: var(--rgba-primary-1);
+  justify-content: space-around;
+  border-radius: 0.625rem;
+  border-bottom: 0;
+  padding: 5px 2px;
+}
+
+.limit-sell .nav-tabs .nav-link {
+  background: transparent;
+  border: 0;
+  text-transform: uppercase;
+  color: var(--primary);
+  padding: 5px 0px;
+  width: 47%;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.limit-sell .nav-tabs .nav-link.active {
+  background: var(--primary);
+  color: #fff;
+  border-radius: 7px;
+}
 
 
 .sell-element {
   padding: 0 45px;
-  margin-top: 1rem; }
-  @media only screen and (max-width: 100rem) {
-    .sell-element {
-      padding: 0 20px; } }
-  .sell-element .sell-blance {
-    margin-bottom: 0.6rem; }
-    .sell-element .sell-blance .blance {
-      font-size: 12px;
-      font-weight: 500;
-      float: right;
-      display: flex;
-      align-items: center; }
-      .sell-element .sell-blance .blance p {
-        color: var(--primary);
-        margin-bottom: 2px;
-        margin-left: 2px;
-        font-weight: 700; }
-    .sell-element .sell-blance .input-group-text {
-      border: 0;
-      background-color: transparent;
-      font-size: 14px;
-      color: #000;
-      position: absolute;
-      height: 100%;
-      right: 0;
-      padding: 0px 24px;
-      color: var(--primary); }
-    .sell-element .sell-blance .form-control {
-      border: 0;
-      background-color: var(--rgba-primary-1);
-      border-radius: 10px !important;
-      padding-right: 60px;
-      padding-left: 20px;
-      height: 60px;
-      font-weight: 500;
-      font-size: 18px; }
-      .sell-element .sell-blance .form-control::placeholder {
-        color: var(--secondary); }
-        [data-theme-version="dark"] .sell-element .sell-blance .form-control::placeholder {
-          color: var(--primary); }
-      @media only screen and (max-width: 105rem) {
-        .sell-element .sell-blance .form-control {
-          height: 48px; } }
-      @media only screen and (max-width: 87.5rem) {
-        .sell-element .sell-blance .form-control {
-          font-size: 15px; } }
+  margin-top: 1rem;
+}
 
- 
+@media only screen and (max-width: 100rem) {
+  .sell-element {
+    padding: 0 20px;
+  }
+}
 
+.sell-element .sell-blance {
+  margin-bottom: 0.6rem;
+}
+
+.sell-element .sell-blance .blance {
+  font-size: 12px;
+  font-weight: 500;
+  float: right;
+  display: flex;
+  align-items: center;
+}
+
+.sell-element .sell-blance .blance p {
+  color: var(--primary);
+  margin-bottom: 2px;
+  margin-left: 2px;
+  font-weight: 700;
+}
+
+.sell-element .sell-blance .input-group-text {
+  border: 0;
+  background-color: transparent;
+  font-size: 14px;
+  color: #000;
+  position: absolute;
+  height: 100%;
+  right: 0;
+  padding: 0px 24px;
+  color: var(--primary);
+}
+
+.sell-element .sell-blance .form-control {
+  border: 0;
+  background-color: var(--rgba-primary-1);
+  border-radius: 10px !important;
+  padding-right: 60px;
+  padding-left: 20px;
+  height: 60px;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.sell-element .sell-blance .form-control::placeholder {
+  color: var(--secondary);
+}
+
+[data-theme-version="dark"] .sell-element .sell-blance .form-control::placeholder {
+  color: var(--primary);
+}
+
+@media only screen and (max-width: 105rem) {
+  .sell-element .sell-blance .form-control {
+    height: 48px;
+  }
+}
+
+@media only screen and (max-width: 87.5rem) {
+  .sell-element .sell-blance .form-control {
+    font-size: 15px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid blue;
+  border-right: 16px solid green;
+  border-bottom: 16px solid red;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
