--- a/src/index.css
+++ b/src/index.css
@@ -28654,7 +28654,11 @@ table.dataTable.no-footer {
 
 
 
-
+.mod{
+  /* filter: blur(2px);
+  overflow: hidden; */
+  opacity: 0.5;
+}
 
 
 
@@ -28662,9 +28666,9 @@ table.dataTable.no-footer {
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid blue;
-  border-right: 16px solid green;
-  border-bottom: 16px solid red;
+  border-top: 16px solid var(--bs-dark);
+  border-right: 16px solid var(--bs-dark);
+  border-bottom: 16px solid var(--bs-dark);
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
