--- a/src/index.css
+++ b/src/index.css
@@ -23099,7 +23099,7 @@ ul a.rsswidget:hover {
   height: 100%;
   border-radius: 10px;
   background-color: #fff;
-  padding: 20px 25px;
+  padding: 20px 20px;
   overflow: hidden;
   position: relative;
   z-index: 2;
@@ -23110,7 +23110,7 @@ ul a.rsswidget:hover {
 
 .icon-bx-wraper.style-1:hover {
   transform: translateY(-8px);
-  background-color: #edf5ff;
+  background-color: #dedfe0;
 }
 
 .icon-bx-wraper.style-1 .title {
@@ -28713,6 +28713,13 @@ table.dataTable.no-footer {
   font-size: clamp(0.75rem, 0.376vw + 0.662rem, 1rem);
 }
 
+.products {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+  /* margin-left: auto;
+  margin-right: auto; */
+}
 
 
 
