--- a/src/index.css
+++ b/src/index.css
@@ -27836,6 +27836,45 @@ pre {
   margin-top: -30px;
 }
 
+.search{
+  position: relative;
+  box-shadow: 0 0 40px rgba(51, 51, 51, .1);
+    
+  }
+
+  .search input{
+
+   height: 50px;
+   text-indent: 25px;
+   border: 1px solid #d6d4d4;
+
+  }
+
+
+  /* .search input:focus{
+
+   box-shadow: none;
+
+
+  }
+
+  .search .fa-search{
+   top: 20px;
+   left: 10px;
+
+  } */
+
+  .search button{
+
+   position: absolute;
+   top: 5px;
+   right: 5px;
+   height: 40px;
+   width: 80px;
+
+  }
+
+
 /* 
 .post-swiper,
 .post-swiper-thumb,
